feat: support note for taskmgr doc and module loaded, note support: group tags date title markdown render close #4
